# Falconer

./: .env.example  .env.openclaw.example  .gitignore  AI_SETUP.md  CODEBASE_ANALYSIS.md  Dockerfile.api  LICENSE  Makefile  README-OPENCLAW-POC.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
docs/: api.md  openclaw-api.md  openclaw-architecture.md  openclaw-development.md  openclaw-setup.md  openclaw-troubleshooting.md  security.md  strategies.md
openclaw-skills/: README.md  bitcoin_market_analyzer.py  requirements.txt
ops/: checks.sh  deploy.sh  docker-compose.poc.yml  docker-compose.regtest.yml  rollback.sh  runbooks.md
ops/openclaw/: Dockerfile
ops/systemd/: falconer.service
policy/: dev.policy.json  prod.policy.json  staging.policy.json
src/falconer/: __init__.py  cli.py  config.py  exceptions.py  logging.py  persistence.py  utils.py  validation.py
src/falconer/adapters/: __init__.py  bitcoind.py  electrs.py  lnbits.py  mempool.py
src/falconer/ai/: __init__.py  agent.py  decision_engine.py  earning_strategies.py  market_analyzer.py
src/falconer/api/: __init__.py  test_endpoints.py
src/falconer/funding/: __init__.py  manager.py  n8n_adapter.py  schema.py  webhook_server.py
src/falconer/policy/: __init__.py  engine.py  schema.py
src/falconer/tasks/: __init__.py  fee_brief.py
src/falconer/wallet/: __init__.py  psbt.py
tests/: test_integration.py  test_openclaw_integration.py  test_persistence.py  test_policy.py  test_psbt.py  test_validation.py
